Week 4 assignment
