# swagger.json
@@ -26,16 +26,6 @@
     }
   ],
   "paths": {
-    "/": {
-      "get": {
-        "description": "",
-        "responses": {
-          "200": {
-            "description": "OK"
-          }
-        }
-      }
-    },
     "/tasks/": {
       "get": {
         "tags": [
@@ -56,6 +46,9 @@
                 }
               }
             }
+          },
+          "401": {
+            "description": "Unauthorized"
           },
           "500": {
             "description": "Server error"
@@ -81,6 +74,9 @@
           },
           "400": {
             "description": "Invalid input"
+          },
+          "401": {
+            "description": "Unauthorized"
           },
           "500": {
             "description": "Server error"
@@ -176,6 +172,9 @@
               }
             }
           },
+          "401": {
+            "description": "Unauthorized"
+          },
           "404": {
             "description": "Task not found"
           },
@@ -234,6 +233,9 @@
               }
             }
           },
+          "401": {
+            "description": "Unauthorized"
+          },
           "404": {
             "description": "Task not found"
           },
@@ -245,71 +247,49 @@
     },
     "/users/": {
       "get": {
-        "tags": [
-          "Users"
-        ],
-        "summary": "Retrieve a list of all users",
         "description": "",
         "responses": {
           "200": {
-            "description": "A list of user objects.",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "type": "array",
-                  "items": {
-                    "$ref": "#/components/schemas/User"
-                  }
-                }
-              }
-            }
+            "description": "OK"
+          },
+          "401": {
+            "description": "Unauthorized"
           },
           "500": {
-            "description": "Server error"
+            "description": "Internal Server Error"
           }
         }
       },
       "post": {
-        "tags": [
-          "Users"
-        ],
-        "summary": "Create a new user",
         "description": "",
         "responses": {
           "201": {
-            "description": "The user was successfully created.",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/User"
-                }
-              }
-            }
+            "description": "Created"
           },
-          "400": {
-            "description": "Invalid input"
+          "401": {
+            "description": "Unauthorized"
           },
           "500": {
-            "description": "Server error"
+            "description": "Internal Server Error"
           }
         },
         "requestBody": {
-          "required": true,
           "content": {
             "application/json": {
               "schema": {
-                "$ref": "#/components/schemas/User"
-              },
-              "examples": {
-                "ExampleRequest": {
-                  "summary": "Example for user creation",
-                  "value": {
-                    "username": "janeDoe",
-                    "email": "jane@example.com",
-                    "password": "PlainTextPassword",
-                    "roles": [
-                      "user"
-                    ]
+                "type": "object",
+                "properties": {
+                  "username": {
+                    "example": "any"
+                  },
+                  "email": {
+                    "example": "any"
+                  },
+                  "password": {
+                    "example": "any"
+                  },
+                  "roles": {
+                    "example": "any"
                   }
                 }
               }
@@ -320,10 +300,6 @@
     },
     "/users/{id}": {
       "get": {
-        "tags": [
-          "Users"
-        ],
-        "summary": "Retrieve a single user by ID",
         "description": "",
         "parameters": [
           {
@@ -332,34 +308,22 @@
             "required": true,
             "schema": {
               "type": "string"
-            },
-            "description": "User ID (MongoDB ObjectId)"
+            }
           }
         ],
         "responses": {
           "200": {
-            "description": "The requested user.",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/User"
-                }
-              }
-            }
+            "description": "OK"
           },
           "404": {
-            "description": "User not found"
+            "description": "Not Found"
           },
           "500": {
-            "description": "Server error"
+            "description": "Internal Server Error"
           }
         }
       },
       "put": {
-        "tags": [
-          "Users"
-        ],
-        "summary": "Update a user by ID",
         "description": "",
         "parameters": [
           {
@@ -368,45 +332,40 @@
             "required": true,
             "schema": {
               "type": "string"
-            },
-            "description": "User ID (MongoDB ObjectId)"
+            }
           }
         ],
         "responses": {
           "200": {
-            "description": "The user was successfully updated.",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/User"
-                }
-              }
-            }
+            "description": "OK"
+          },
+          "401": {
+            "description": "Unauthorized"
           },
           "404": {
-            "description": "User not found"
+            "description": "Not Found"
           },
           "500": {
-            "description": "Server error"
+            "description": "Internal Server Error"
           }
         },
         "requestBody": {
-          "required": true,
           "content": {
             "application/json": {
               "schema": {
-                "$ref": "#/components/schemas/User"
-              },
-              "examples": {
-                "ExampleUpdate": {
-                  "summary": "Example for user update",
-                  "value": {
-                    "username": "johnDoeUpdated",
-                    "email": "johnupdated@example.com",
-                    "password": "NewPlainTextPassword",
-                    "roles": [
-                      "admin"
-                    ]
+                "type": "object",
+                "properties": {
+                  "username": {
+                    "example": "any"
+                  },
+                  "email": {
+                    "example": "any"
+                  },
+                  "password": {
+                    "example": "any"
+                  },
+                  "roles": {
+                    "example": "any"
                   }
                 }
               }
@@ -415,10 +374,6 @@
         }
       },
       "delete": {
-        "tags": [
-          "Users"
-        ],
-        "summary": "Delete a user by ID",
         "description": "",
         "parameters": [
           {
@@ -427,23 +382,45 @@
             "required": true,
             "schema": {
               "type": "string"
-            },
-            "description": "User ID (MongoDB ObjectId)"
+            }
           }
         ],
         "responses": {
           "200": {
-            "description": "The user was successfully deleted.",
+            "description": "OK"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "404": {
+            "description": "Not Found"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/logout": {
+      "get": {
+        "tags": [
+          "Authentication"
+        ],
+        "summary": "Logout",
+        "description": "",
+        "responses": {
+          "201": {
+            "description": "The task was successfully created.",
             "content": {
               "application/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/User"
+                  "$ref": "#/components/schemas/Task"
                 }
               }
             }
           },
-          "404": {
-            "description": "User not found"
+          "400": {
+            "description": "Invalid input"
           },
           "500": {
             "description": "Server error"
@@ -466,7 +443,7 @@
               }
             }
           },
-          "email": {
+          "photo": {
             "type": "object",
             "properties": {
               "type": {
@@ -475,7 +452,7 @@
               }
             }
           },
-          "password": {
+          "profileUrl": {
             "type": "object",
             "properties": {
               "type": {
@@ -557,6 +534,24 @@
               "type": {
                 "type": "string",
                 "example": "string"
+              }
+            }
+          },
+          "project": {
+            "type": "object",
+            "properties": {
+              "type": {
+                "type": "string",
+                "example": "string"
+              }
+            }
+          },
+          "percentComplete": {
+            "type": "object",
+            "properties": {
+              "type": {
+                "type": "string",
+                "example": "number"
               }
             }
           },
